xdg-shell: according to the spec, MPV must be killed if it's resized from top or bottom edge
When a window is being resized, the configure events carry the maximum window geometry size. The client cannot resize beyond it. However, it's allowed to attach a buffer smaller than the configured size, for example to keep the aspect ratio, etc. This works fine as long as you resize the window by dragging either one of the four corners (for the most part).
If you try to resize a window that keeps some specific aspect ratio by dragging either one of four sides, the client may need to provide a buffer that is larger than the configured size.
One such example is mpv. If you enlarge it by dragging the bottom window edge, the provided buffer will have a proper height according to the spec, but the width might be bigger than in the configure event, so the aspect ratio is preserved. From the user's perspective, there is nothing wrong with such a behavior, in fact, one could argue that it's expected.
As far as I know, neither one major Wayland compositor tries to enforce the maximum resizing window geometry at the moment. I added the corresponding check in weston and it made resizing mpv very inconvenient on wayland.